[package]
name = "github-pr-review"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/github-pr-review.rs"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
dotenv = "0.15.0"
flowsnet-platform-sdk = "0.1"
github-flows = "0.5"
http_req_wasi = { version = "0.10.2", features = ["wasmedge_ssl"] }
lazy_static = "1.4.0"
log = "0.4"
openai-flows = "0.7"
regex = "1.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
strum = "0.24.1"
strum_macros = "0.24.3"
tera = { version = "1.18", default-features = false }
tokio_wasi = { version = "1.25.1", features = ["macros", "rt"] }
words-count = "0.1.4"
